--- a/homepage.html
+++ b/homepage.html
@@ -9,11 +9,18 @@
         <img src="img/myself.jpeg">
     </div>
     <h1> LI </h1>
-    <lu>
+    <ul>
         <li> lab one</li>
-        <li> <a herf="#">lab two</a></li>
-        <li> <a>lab three</a></li>
-        <li> <a>lab four</a></li>
-    </lu>
+        <li> <a href="#">lab two</a></li>
+        <li> <a href="#">lab three</a></li>
+        <li> <a href="#">lab four</a></li>
+    </ul>
+    <p>
+        <a href="https://validator.w3.org/check/referer">
+            <img src=http://mumstudents.org/cs472/2013-09/images/w3c-html.png alt="Validate" />
+        </a>
+    </p>
 </body>
 </html>
+
+
