--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>homework 986895 </title>
+    <link rel="icon" href="img/myself.jpeg"/>
 </head>
 <body>
     <div>
