--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <img src="img/myself.jpeg">
+        <img src="img/myself.jpeg" alt="my image">
     </div>
     <h1> LI </h1>
     <ul>
