--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1> LI </h1>
     <ul>
         <li> lab one</li>
-        <li> <a href="aboutme.html">lab two</a></li>
+        <li> <a href="aboutme.html">aboutme</a></li>
         <li> <a href="#">lab three</a></li>
         <li> <a href="#">lab four</a></li>
     </ul>
