--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li> lab one</li>
         <li> <a href="aboutme.html">aboutme</a></li>
-        <li> <a href="#">lab three</a></li>
+        <li> <a href="pie.html">pie</a></li>
         <li> <a href="#">lab four</a></li>
     </ul>
     <p>
