--- a/pie.html
+++ b/pie.html
@@ -11,7 +11,7 @@
         <h1>Grandma's Lemon Meringue Pie</h1>
     </div>
 
-    <img src="img/pie.jpg">
+    <img src="img/pie.jpg" alt="pie">
     <pre>
 One 9-inch pie
 30 Min - Prep time
