--- a/pie.html
+++ b/pie.html
@@ -109,22 +109,31 @@ One 9-inch pie
         </h2>
     </div>
     <div class="boot_context">
+        <p>
         This is a very fun recipe to follow, because Grandma makes it sweet and simple. This pie is thickened with cornstarch and flour in addition to egg yolks, and contains no milk.
-
+        <br/>
+        <br/>
         - Emilie S.
+         </p>
     </div>
 
     <div class="boot_context">
+        <p>
         Q: What do you call an ape who loves pie?
         A: A meringue-utan.
-
+            <br/>
+            <br/>
         - Vickie K.
+        </p>
     </div>
 
     <div class="boot_context">
+        <p>
         This site can really engage my interest. Follow the recipe above and make it so! This pie is number one.
-
+            <br/>
+            <br/>
         - Jean-Luc Piecard
+        </p>
     </div>
     <div class="sub_title">
         <h2>
@@ -134,11 +143,11 @@ One 9-inch pie
     <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a>
     <br/>
     <a href="index.html">Home</a>
-    <span>
-    Copyright 漏 2012 Granny's Pies |
-    A Granny's Pies Production     |
-    All rights reserved
-    </span>
+    <pre>
+Copyright 漏 2012 Granny's Pies  |
+A Granny's Pies Production       |
+All rights reserved
+    </pre>
 
 
     <p>
