--- a/pie.html
+++ b/pie.html
@@ -30,13 +30,13 @@ One 9-inch pie
             1 cup white sugar
         </li>
         <li>
-            2 tbsp all-purpose flour
+            2 <abbr title="tablespoonsn">tbsp</abbr> all-purpose flour
         </li>
         <li>
-            3 tbsp cornstarch
+            3 <abbr title="tablespoons">tbsp</abbr> cornstarch
         </li>
         <li>
-            1/4 tsp salt
+            1/4 <abbr title="teaspoons">tsp</abbr> salt
         </li>
         <li>
             1 1/2 cups water
@@ -45,7 +45,7 @@ One 9-inch pie
             2 lemons, juiced and zested
         </li>
         <li>
-            2 tbsp butter
+            2 <abbr title="tablespoons">tbsp</abbr> butter
         </li>
         <li>
             4 egg yolks, beaten
@@ -57,7 +57,7 @@ One 9-inch pie
             4 egg whites
         </li>
         <li>
-            6 tbsp white sugar
+            6 <abbr title="World Health Organization">tbsp</abbr> white sugar
         </li>
     </ul>
     <div class="sub_title">
@@ -67,10 +67,10 @@ One 9-inch pie
     </div>
     <ol>
         <li>
-            Preheat Oven: Preheat oven to 350 degrees F (175 degrees C).
+            <span class="title_text">Preheat Oven:</span> Preheat oven to 350 degrees F (175 degrees C).
         </li>
         <li>
-            Make Lemon Filling: In a medium saucepan ...
+            <span class="title_text">Make Lemon Filling:</span> In a medium saucepan ...
             <ul>
                 <li> Whisk together 1 cup sugar, flour, cornstarch, and salt.</li>
                 <li>  Stir in water, lemon juice and lemon zest.</li>
@@ -84,7 +84,7 @@ One 9-inch pie
             </ul>
         </li>
         <li>
-            Make Meringue: In a large glass or metal bowl ...
+            <span class="title_text">Make Meringue: </span> In a large glass or metal bowl ...
             <ul>
                 <li>
                     Whip egg whites until foamy.
@@ -98,9 +98,12 @@ One 9-inch pie
             </ul>
         </li>
         <li>
-            Bake: Bake in preheated oven for 10 minutes, or until meringue is golden brown.
+            <span class="title_text">Bake:</span> Bake in preheated oven for 10 minutes, or until meringue is golden brown.
         </li>
     </ol>
+    <div>
+        This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span class="deldettext">cake </span>pie!
+    </div>
 
     <hr/>
     <div class="sub_title">
@@ -143,10 +146,10 @@ One 9-inch pie
     <a href="https://www.google.com/search?q=lemon+meringue+pie+recipe&start=10">Search for other lemon meringue pie recipes</a>
     <br/>
     <a href="index.html">Home</a>
-    <pre>
-Copyright 漏 2012 Granny's Pies  |
-A Granny's Pies Production       |
-All rights reserved
+    <pre class="copyright">
+Copyright 漏 2012 Granny's Pies
+     A Granny's Pies Production
+            All rights reserved
     </pre>
 
 
