--- a/pie.html
+++ b/pie.html
@@ -102,7 +102,7 @@ One 9-inch pie
         </li>
     </ol>
     <div>
-        This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <span class="deldettext">cake </span>pie!
+        This is our favorite recipe here at Granny's Pies. It has been enjoyed by pie fans for many years. It's Granny's favorite! We hope you'll find that this recipe is delicious and also easy to follow; it's a piece of <del>cake</del>pie!
     </div>
 
     <hr/>
